# poc-cketh

./: README.md  dfx.json  mops.toml  package-lock.json  package.json
src/eth-bridge-poc-backend/: main.mo
src/eth-bridge-poc-backend/utils/: ECDSA.mo  IcEcdsaApi.mo
src/eth-bridge-poc-frontend/: package.json
src/eth-bridge-poc-frontend/src/: App copy.jsx  App.jsx  infura.js  main.jsx  utils.js  vite-env.d.ts
src/eth-bridge-poc-frontend/src/abi/: ERC20_ABI.js  USDC_ABI.js
src/rust-address-gen-test/: Cargo.toml
src/rust-address-gen-test/src/: main.rs
